--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,11 @@
     "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.11",
     "styled-normalize": "^8.0.7",
+    "styled-reset": "^4.5.1",
     "typescript": "^4.9.5",
     "workbox-background-sync": "^6.6.0",
     "workbox-broadcast-update": "^6.6.0",
