--- a/owner/package.json
+++ b/owner/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.8.0",
     "styled-components": "^5.3.11",
     "styled-normalize": "^8.0.7",
     "styled-reset": "^4.5.1",
