--- a/owner/package.json
+++ b/owner/package.json
@@ -10,6 +10,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
@@ -41,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.26",
     "eslint": "^8.48.0",
