--- a/.gitignore
+++ b/.gitignore
@@ -156,3 +156,10 @@ out/
 
 ### Spring Boot - custom ###
 **/application-env.yml
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
