--- a/frontend/owner/package.json
+++ b/frontend/owner/package.json
@@ -21,7 +21,8 @@
     "styled-components": "^5.3.11",
     "styled-normalize": "^8.0.7",
     "styled-reset": "^4.5.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "universal-cookie": "^6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
