--- a/frontend/customer/.eslintrc.json
+++ b/frontend/customer/.eslintrc.json
@@ -6,7 +6,7 @@
     "extends": [
       // "airbnb",
         "eslint:recommended",
-        "plugin:react/recommended",
+        // "plugin:react/recommended",
         "plugin:@typescript-eslint/recommended",
         "prettier"
     ],
@@ -19,7 +19,7 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react",
+        // "react",
         "@typescript-eslint"
     ],
     "rules": {
