--- a/frontend/customer/Dockerfile
+++ b/frontend/customer/Dockerfile
@@ -4,4 +4,4 @@ COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
-COPY --from=build-stage /app/build /var/www/html
+COPY /app/build /var/www/html
