--- a/frontend/customer/Dockerfile
+++ b/frontend/customer/Dockerfile
@@ -1,6 +1,7 @@
-FROM node:16-alpine
+FROM node:16-alpine AS build-stage
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
+COPY --from=build-stage /app/build /var/www/html
