--- a/frontend/customer/package.json
+++ b/frontend/customer/package.json
@@ -18,7 +18,6 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.3.11",
     "styled-normalize": "^8.0.7",
     "styled-reset": "^4.5.1",
     "typescript": "^4.9.5",
@@ -56,8 +55,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react-slick": "^0.23.10",
-    "@types/styled-components": "^5.1.26",
+    "@types/styled-components": "^5.1.27",
     "eslint": "^8.48.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
