--- a/frontend/customer/package.json
+++ b/frontend/customer/package.json
@@ -62,5 +62,6 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.0.3"
-  }
+  },
+  "homepage": "."
 }
