--- a/frontend/customer/Dockerfile
+++ b/frontend/customer/Dockerfile
@@ -1,7 +1,12 @@
-FROM node:16
+FROM node:18 AS build-stage
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-EXPOSE 3000
-CMD ["npm", "start"]
+RUN npm run build
+FROM nginx
+COPY nginx.conf /etc/nginx/nginx.conf
+COPY --from=build-stage /app/build /usr/share/nginx/html
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
