--- a/frontend/customer/package.json
+++ b/frontend/customer/package.json
@@ -10,6 +10,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.0",
     "jsqr": "^1.4.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
