--- a/frontend/customer/Dockerfile
+++ b/frontend/customer/Dockerfile
@@ -3,7 +3,8 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-RUN npm run build
+CMD ["npm", "run", "build"]
+
 FROM nginx
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY --from=build-stage /app/build /usr/share/nginx/html
