--- a/frontend/customer/Dockerfile
+++ b/frontend/customer/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-CMD ["npm", "run", "build"]
+RUN npm run build
 
 FROM nginx
 COPY nginx.conf /etc/nginx/nginx.conf
