--- a/frontend/customer/Dockerfile
+++ b/frontend/customer/Dockerfile
@@ -3,10 +3,6 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-RUN npm run build
-
-FROM nginx
-COPY nginx.conf /etc/nginx/nginx.conf
-COPY --from=build-stage /app/build /usr/share/nginx/html
 EXPOSE 3000
-CMD ["nginx", "-g", "daemon off;"]
+RUN npm run build
+CMD ["npm", "start"]
