--- a/frontend/customer/package.json
+++ b/frontend/customer/package.json
@@ -2,6 +2,7 @@
   "name": "foorending-customer",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "^17.0.45",
@@ -63,5 +64,4 @@
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.0.3"
   },
-  "homepage": "."
 }
