--- a/frontend/customer/package.json
+++ b/frontend/customer/package.json
@@ -2,7 +2,6 @@
   "name": "foorending-customer",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "^17.0.45",
@@ -64,4 +63,5 @@
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.0.3"
   },
+  "homepage": "."
 }
