--- a/frontend/customer/Dockerfile
+++ b/frontend/customer/Dockerfile
@@ -3,5 +3,10 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
+RUN npm run build
+
+FROM nginx
+COPY conf /etc/nginx
+COPY --from=build-stage /app/build /usr/share/nginx/html/customer
 EXPOSE 3000
-CMD ["npm", "start"]
+CMD ["nginx", "-g", "daemon off;"]
