--- a/frontend/customer/nginx.conf
+++ b/frontend/customer/nginx.conf
@@ -1,7 +1,8 @@
 server {
     listen 80;
-    location / {
+    location /customer/ {
         root    /app/build;
         index   index.html;
+        try_files $uri $uri/ /index.html;
     }
 }
