--- a/frontend/customer/package.json
+++ b/frontend/customer/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.5.0",
     "jsqr": "^1.4.0",
     "react": "^18.2.0",
+    "react-devtools": "^4.28.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
@@ -63,5 +64,5 @@
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.0.3"
   },
-  "homepage": "."
+  "homepage": "/customer"
 }
