--- a/frontend/customer/nginx.conf
+++ b/frontend/customer/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    location /customer {
+    location / {
         root    /app/build;
         index   index.html;
         try_files $uri $uri/ /index.html;
