[FE] Fix : fix basename and homepage

--- a/frontend/customer/package.json
+++ b/frontend/customer/package.json
@@ -64,5 +64,7 @@
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.0.3"
   },
-  "homepage": "/customer"
+//  "homepage": "/customer"
+  "homepage": "."
 }
+
