--- a/frontend/customer/package.json
+++ b/frontend/customer/package.json
@@ -2,6 +2,7 @@
   "name": "foorending-customer",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000", 
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "^17.0.45",
@@ -33,6 +34,7 @@
     "workbox-routing": "^6.6.0",
     "workbox-strategies": "^6.6.0",
     "workbox-streams": "^6.6.0"
+    
   },
   "scripts": {
     "start": "react-scripts start",
@@ -67,3 +69,4 @@
   },
   "homepage": "/customer"
 }
+
