--- a/frontend/customer/package.json
+++ b/frontend/customer/package.json
@@ -34,8 +34,8 @@
     "workbox-streams": "^6.6.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "env-cmd -f .env.development react-scripts start",
+    "build": "env-cmd -f .env.production react-scripts build",
     "eject": "react-scripts eject",
     "lint": "eslint . --ext .js,.ts,.tsx src",
     "lint:fix": "eslint . --ext js,jsx,ts,tsx --fix"
