--- a/frontend/owner/package.json
+++ b/frontend/owner/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.0",
+    "env-cmd": "^10.1.0",
     "http-proxy-middleware": "^2.0.6",
     "nanoid": "^5.0.1",
     "react": "^18.2.0",
@@ -27,7 +28,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "env-cmd -f .env.production react-scripts build",
     "lint": "eslint . --ext .js,.ts,.tsx src",
     "lint:fix": "eslint . --ext js,jsx,ts,tsx --fix"
   },
