[FE] Chore : install env-cmd

--- a/frontend/customer/package.json
+++ b/frontend/customer/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.0",
+    "env-cmd": "^10.1.0",
     "jsqr": "^1.4.0",
     "react": "^18.2.0",
     "react-devtools": "^4.28.0",
@@ -34,7 +35,7 @@
     "workbox-streams": "^6.6.0"
   },
   "scripts": {
-    "start": "env-cmd -f .env.development react-scripts start",
+    "start": "react-scripts start",
     "build": "env-cmd -f .env.production react-scripts build",
     "eject": "react-scripts eject",
     "lint": "eslint . --ext .js,.ts,.tsx src",
