--- a/frontend/customer/package.json
+++ b/frontend/customer/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/crypto-js": "^4.1.2",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.0",
+    "crypto-js": "^4.1.1",
     "jsqr": "^1.4.0",
     "react": "^18.2.0",
     "react-devtools": "^4.28.0",
@@ -65,4 +67,5 @@
     "prettier": "^3.0.3"
   },
   "homepage": "/customer"
+  
 }
