--- a/frontend/owner/package.json
+++ b/frontend/owner/package.json
@@ -10,6 +10,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.0",
     "http-proxy-middleware": "^2.0.6",
+    "moment": "^2.29.4",
     "nanoid": "^5.0.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
