[FE] Feat : 카드 정보 검증 로직, 암호화

--- a/frontend/customer/package.json
+++ b/frontend/customer/package.json
@@ -66,6 +66,6 @@
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.0.3"
   },
-  "homepage": "/customer"
-  
+  "homepage": "/customer",
+  "proxy":"https://j9c208.p.ssafy.io/customer"
 }
