[FE] Style: 테스트 모달 추가

--- a/frontend/customer/package.json
+++ b/frontend/customer/package.json
@@ -70,6 +70,6 @@
     "prettier": "^3.0.3"
   },
   "homepage": "/customer",
-  "proxy":"https://j9c208.p.ssafy.io/customer"
+  "proxy":"https://j9c208.p.ssafy.io"
 }
 
