--- a/frontend/customer/.env.production
+++ b/frontend/customer/.env.production
@@ -1,2 +1,3 @@
-REACT_APP_KAKAO_MAP_KEY = a91ce8444bd5a8698b3a49608b315fd2
+REACT_APP_KAKAO_MAP_KEY = 8ae06e1c329b4fe685636eddc4ce2a3d
 REACT_APP_BASE_URL = https://j9c208.p.ssafy.io
+REACT_APP_KAKAO_MAP_REST_KEY = KakaoAK 3f332958ca50f86368db003e5f9f532d
