--- a/frontend/customer/package.json
+++ b/frontend/customer/package.json
@@ -4,14 +4,16 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@stomp/stompjs": "^7.0.0",
     "@types/crypto-js": "^4.1.2",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.0",
-    "env-cmd": "^10.1.0",
     "crypto-js": "^4.1.1",
+    "env-cmd": "^10.1.0",
+    "jsencrypt": "^3.3.2",
     "jsqr": "^1.4.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -22,6 +24,8 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "sockjs-client": "^1.6.1",
+    "stomp": "^0.1.1",
     "styled-reset": "^4.5.1",
     "typescript": "^4.9.5",
     "workbox-background-sync": "^6.6.0",
@@ -36,7 +40,6 @@
     "workbox-routing": "^6.6.0",
     "workbox-strategies": "^6.6.0",
     "workbox-streams": "^6.6.0"
-    
   },
   "scripts": {
     "start": "react-scripts start",
@@ -70,6 +73,5 @@
     "prettier": "^3.0.3"
   },
   "homepage": "/customer",
-  "proxy":"https://j9c208.p.ssafy.io"
+  "proxy": "https://j9c208.p.ssafy.io"
 }
-
