[FE] Style: 보안 코드 수정

--- a/frontend/customer/package.json
+++ b/frontend/customer/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
+    "@types/sockjs-client": "^1.5.2",
     "axios": "^1.5.0",
     "crypto-js": "^4.1.1",
     "env-cmd": "^10.1.0",
@@ -28,6 +29,7 @@
     "stomp": "^0.1.1",
     "styled-reset": "^4.5.1",
     "typescript": "^4.9.5",
+    "websocket": "^1.0.34",
     "workbox-background-sync": "^6.6.0",
     "workbox-broadcast-update": "^6.6.0",
     "workbox-cacheable-response": "^6.6.0",
