--- a/frontend/owner/package.json
+++ b/frontend/owner/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.0",
+    "classnames": "^2.3.2",
     "env-cmd": "^10.1.0",
     "moment": "^2.29.4",
     "nanoid": "^5.0.1",
