--- a/frontend/customer/package.json
+++ b/frontend/customer/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux-persist": "^4.3.1",
     "@types/sockjs-client": "^1.5.2",
     "axios": "^1.5.0",
     "crypto-js": "^4.1.1",
@@ -24,6 +25,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "sockjs-client": "^1.6.1",
     "stomp": "^0.1.1",
